
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef int u_char ;


 int exit (int) ;
 int printf (char*,int) ;
 void* read_bits (int,int*,int) ;

void read_kreed_pck(u_char *buff, int len) {
    u_long bits = 32,
            check;
    u_char *p;

    check = read_bits(32, buff, 0);
    if(check != 12) {
        printf("\nError: server has replied with unexpected data (0x%08lx)\n\n", check);
        exit(1);
    }
    read_bits(16, buff, bits); bits += 16;
    read_bits(28, buff, bits); bits += 28;
    for(len -= (bits >> 3), p = buff; len; len--) {
        *p++ = read_bits(8, buff, bits);
        bits += 8;
    }
    *p = 0x00;
}
