; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_672.c_read_kreed_pck.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_672.c_read_kreed_pck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [60 x i8] c"\0AError: server has replied with unexpected data (0x%08lx)\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @read_kreed_pck(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 32, i32* %5, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i8* @read_bits(i32 32, i32* %8, i32 0)
  %10 = ptrtoint i8* %9 to i32
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 12
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = call i32 @exit(i32 1) #3
  unreachable

17:                                               ; preds = %2
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i8* @read_bits(i32 16, i32* %18, i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = add nsw i32 %21, 16
  store i32 %22, i32* %5, align 4
  %23 = load i32*, i32** %3, align 8
  %24 = load i32, i32* %5, align 4
  %25 = call i8* @read_bits(i32 28, i32* %23, i32 %24)
  %26 = load i32, i32* %5, align 4
  %27 = add nsw i32 %26, 28
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = ashr i32 %28, 3
  %30 = load i32, i32* %4, align 4
  %31 = sub nsw i32 %30, %29
  store i32 %31, i32* %4, align 4
  %32 = load i32*, i32** %3, align 8
  store i32* %32, i32** %7, align 8
  br label %33

33:                                               ; preds = %45, %17
  %34 = load i32, i32* %4, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %48

36:                                               ; preds = %33
  %37 = load i32*, i32** %3, align 8
  %38 = load i32, i32* %5, align 4
  %39 = call i8* @read_bits(i32 8, i32* %37, i32 %38)
  %40 = ptrtoint i8* %39 to i32
  %41 = load i32*, i32** %7, align 8
  %42 = getelementptr inbounds i32, i32* %41, i32 1
  store i32* %42, i32** %7, align 8
  store i32 %40, i32* %41, align 4
  %43 = load i32, i32* %5, align 4
  %44 = add nsw i32 %43, 8
  store i32 %44, i32* %5, align 4
  br label %45

45:                                               ; preds = %36
  %46 = load i32, i32* %4, align 4
  %47 = add nsw i32 %46, -1
  store i32 %47, i32* %4, align 4
  br label %33

48:                                               ; preds = %33
  %49 = load i32*, i32** %7, align 8
  store i32 0, i32* %49, align 4
  ret void
}

declare dso_local i8* @read_bits(i32, i32*, i32) #1

declare dso_local i32 @printf(i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
